--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/preset-typescript": "^7.22.5",
     "@jest/globals": "^29.5.0",
     "@types/jest": "^29.5.2",
+    "jest": "^29.5.0",
     "ts-jest": "^29.1.0",
     "typescript": "^5.1.3"
   }
